heading tests pass, need more source files

--- a/package.json
+++ b/package.json
@@ -125,6 +125,11 @@
         "vscode-tmgrammar-test": "^0.1.3"
     },
     "scripts": {
-        "test": "vscode-tmgrammar-test 'tests/**/*.test.tiddlywiki5'"
-    }    
+        "echo-test": "bash -c \"echo $(pwd) && echo ./tests/tiddlywiki5/*.test.tiddlywiki5\"",
+        "list-test": "bash -c \"ls ./tests/tiddlywiki5/*.test.tiddlywiki5\"",
+        "test": "bash -c \"vscode-tmgrammar-test -g grammars/tiddlywiki5.tmLanguage.json -g tests/syntaxes/html.json -g tests/syntaxes/gfm.json -g tests/syntaxes/Ruby.plist -g tests/syntaxes/Makefile.json -g tests/syntaxes/JSON.tmLanguage -g tests/syntaxes/xml.json -g tests/syntaxes/xsl.json -g tests/syntaxes/css.plist -g tests/syntaxes/Perl.plist -g tests/syntaxes/cshtml.json -g tests/syntaxes/Objective-C.tmLanguage -g tests/syntaxes/MagicPython.tmLanguage.json -g tests/syntaxes/java.json -g tests/syntaxes/Shell-Unix-Bash.tmLanguage.json -g tests/syntaxes/sql.plist -g tests/syntaxes/c.json -g tests/syntaxes/c++.json -g tests/syntaxes/php.json -g tests/syntaxes/git-commit.tmLanguage -g tests/syntaxes/coffeescript.json -g tests/syntaxes/JavaScript.tmLanguage.json ./tests/tiddlywiki5/*.test.tiddlywiki5\""
+    },
+    "npmConfig": {
+      "script-shell": "/bin/bash"
+    } 
 }
