--- a/package.json
+++ b/package.json
@@ -122,8 +122,7 @@
         }
     },
     "devDependencies": {
-        "vscode-tmgrammar-test": "^0.1.3",
-        "language-gfm": "https://github.com/atom/language-gfm"
+        "vscode-tmgrammar-test": "^0.1.3"
     },
     "scripts": {
         "echo-test": "bash -c 'echo $(pwd) && echo ./tests/tiddlywiki5/*.test.tiddlywiki5'",
