--- a/package.json
+++ b/package.json
@@ -122,11 +122,12 @@
         }
     },
     "dependencies": {
-        "lanuage-gfmg": "https://github.com/atom/lanuage-gfmg.git",
-        "vscode-jsp": "https://github.com/pthorsson/vscode-jsp.git"
     },
     "devDependencies": {
-        "vscode-tmgrammar-test": "^0.1.3"
+        "vscode-tmgrammar-test": "^0.1.3",
+        "language-gfm": "https://github.com/atom/language-gfm",
+        "toml.tmbundle": "https://github.com/textmate/toml.tmbundle.git",
+        "vscode-jsp": "https://github.com/pthorsson/vscode-jsp.git"
     },
     "scripts": {
         "echo-test": "bash -c 'echo $(pwd) && echo ./tests/tiddlywiki5/*.test.tiddlywiki5'",
