--- a/package.json
+++ b/package.json
@@ -126,6 +126,8 @@
     },
     "devDependencies": {
         "vscode-tmgrammar-test": "^0.1.3",
+        "tm-grammars":"^1.7.2",
+        "tm-themes":"^1.4.1",
         "language-gfm": "https://github.com/atom/language-gfm",
         "vscode-jsp": "https://github.com/pthorsson/vscode-jsp"
     },
@@ -133,7 +135,8 @@
         "echo-test": "bash -c 'echo $(pwd) && echo ./tests/tiddlywiki5/*.test.tiddlywiki5'",
         "list-test": "bash -c 'ls ./tests/tiddlywiki5/*.test.tiddlywiki5'",
         "test": "bash ./run_tests.sh './tests/tiddlywiki5/*.test.tiddlywiki5'",
-        "testbasic": "bash ./run_tests.sh './tests/tiddlywiki5/html.basic.test.tiddlywiki5'"
+        "tests-advanced": "bash ./run_tests.sh './tests/tiddlywiki5/html.advanced.test.tiddlywiki5'",
+        "tests-basic": "bash ./run_tests.sh './tests/tiddlywiki5/html.basic.test.tiddlywiki5'"
     },
     "npmConfig": {
       "script-shell": "/bin/bash"
