--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
         "vscode": "^1.43.0"
     },
     "categories": [
-        "Programming Languages"
+        "Programming Languages",
+        "Languages",
+        "Snippets"
     ],
     "keywords": [
         "tiddlywiki",
@@ -18,6 +20,7 @@
         "grammar",
         "syntax",
         "highlighting",
+        "snippets",
         "shiki"
     ],
     "publisher": "joshua-fontany",
